--- a/NodeEditorApp/Src/App/MainWindow.ui
+++ b/NodeEditorApp/Src/App/MainWindow.ui
@@ -64,7 +64,7 @@
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QDockWidget" name="propertyWidget">
    <property name="styleSheet">
-    <string notr="true">background: orange;</string>
+    <string notr="true"/>
    </property>
    <property name="windowTitle">
     <string>Node Property</string>
